--- a/templates/fastapi-template/{{cookiecutter.project_name}}/Dockerfile
+++ b/templates/fastapi-template/{{cookiecutter.project_name}}/Dockerfile
@@ -33,4 +33,6 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-CMD ["uvx", "start"]
+# Use make start to run the application
+ENTRYPOINT ["make"]
+CMD ["start"]
