--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,9 @@ dependencies = [
     "typer>=0.9.0",
     "rich>=13.7.0",
     "cookiecutter>=2.5.0",
-    "pytest>=7.4.4"
+    "pytest>=7.4.4",
+    "sqlmodel>=0.0.25",
+    "pydantic>=2.11.10",
 ]
 
 [project.urls]
