--- a/templates/fastapi-template/{{cookiecutter.project_name}}/pyproject.toml
+++ b/templates/fastapi-template/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "{{cookiecutter.package_name}}"
+name = "{{cookiecutter.project_name}}"
 version = "0.1.0"
 description = "{{cookiecutter.description}}"
 authors = [
